re PR driver/47390 (Linking with -export-dynamic broken)

PR driver/47390
	* common.opt (export-dynamic): New Driver option.
	* gcc.c (LINK_COMMAND_SPEC): Add comment about %{e*}.

From-SVN: r170253